// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript-css-modules > build > should create valid app 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="/static/typescript/main-4bad37555f2de4beeb21.css"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/static/typescript/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/static/typescript/2.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/static/typescript/main.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_19hsk3y0">
        <div
          class="_19hsk3y1"
          data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="/static/typescript/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/static/typescript/2.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/static/typescript/main.js"
    >
    </script>
  </body>
</html>"
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -44,7 +44,7 @@
         </div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
       </div>
     </div>
`;

exports[`typescript-css-modules > build > should generate the expected files 1`] = `
{
  "2.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "2.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8" />
    <title>My Awesome Project</title>
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <link data-chunk="main" rel="stylesheet" href="/static/typescript/main-4bad37555f2de4beeb21.css">
<link data-chunk="main" rel="preload" as="script" href="/static/typescript/runtime.js">
<link data-chunk="main" rel="preload" as="script" href="/static/typescript/2.js">
<link data-chunk="main" rel="preload" as="script" href="/static/typescript/main.js">
  </head>
  <body>
    <div id="app"><div class="_19hsk3y0"><div class="_19hsk3y1" data-automation-text="true">Hello World</div><div>Render type: <!-- -->Initial</div></div></div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__" type="application/json">[]</script><script id="__LOADABLE_REQUIRED_CHUNKS___ext" type="application/json">{"namedChunks":[]}</script>
<script async data-chunk="main" src="/static/typescript/runtime.js"></script>
<script async data-chunk="main" src="/static/typescript/2.js"></script>
<script async data-chunk="main" src="/static/typescript/main.js"></script>
  </body>
</html>",
  "main-4bad37555f2de4beeb21.css": "._19hsk3y0{display:flex}._19hsk3y0 ._19hsk3y1{font-size:32px}

/*# sourceMappingURL=main-4bad37555f2de4beeb21.css.map*/",
  "main-4bad37555f2de4beeb21.css.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules > build-ssr > should create valid app 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="http://localhost:4003/main-4bad37555f2de4beeb21.css"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://localhost:4003/runtime.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://localhost:4003/2.js"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="http://localhost:4003/main.js"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_19hsk3y0">
        <div
          class="_19hsk3y1"
          data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="http://localhost:4003/runtime.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="http://localhost:4003/2.js"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="http://localhost:4003/main.js"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>"
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -47,7 +47,7 @@
         </div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
       </div>
     </div>
`;

exports[`typescript-css-modules > build-ssr > should generate the expected files 1`] = `
{
  "2.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-4bad37555f2de4beeb21.css": "._19hsk3y0{display:flex}._19hsk3y0 ._19hsk3y1{font-size:32px}

/*# sourceMappingURL=main-4bad37555f2de4beeb21.css.map*/",
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "server.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules > start > should start a development server 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="stylesheet"
      href="/main.css"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/2.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/main.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="styles_root__19hsk3y0">
        <div
          class="styles_nested__19hsk3y1"
          data-automation-text="true"
        >
          Hello World
        </div>
        <div>
          Render type:
          Initial
        </div>
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      []
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":[]}
    </script>
    <script
      async
      data-chunk="main"
      src="/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/2.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/main.js"
    >
    </script>
  </body>
</html>"
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -44,7 +44,7 @@
         </div>
         <div>
           Render type:
-          Initial
+          Client
         </div>
       </div>
     </div>
`;
